--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  background-image: url(./components/img-weather.avif);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-.App-link {
-  color: #61dafb;
+.weather-form{
+  margin-bottom: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-form input{
+  padding: 10px;
+  border: 4px solid rgb(83, 83, 122);
+  border-radius: 6px;
+  margin-right: 10px;
+}
+.weather-form button{
+  background-color: blue;
+  color: #fff;
+  padding: 10px;
+  border-radius: 6px;
+}
+.weather-form button:hover{
+  background-color: rgb(226, 107, 234);
+}
+.weather-display{
+  background-image: url(./components/weather.jfif);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 20px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.error{
+  color: #000;
+  font-weight: bold;
 }
